--- a/index.html
+++ b/index.html
@@ -60,79 +60,79 @@
               <ul class="mt-3 fs-5 gap-3 d-grid row-gap-1">
                 <h3>Quick Link</h3>
                 <li class="">
-                  <a class="text-decoration-none" href="">Mercy Chinwo Songs</a>
+                  <a class="text-decoration-none" >Mercy Chinwo Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Nathaniel Bassey Songs</a>
+                  <a class="text-decoration-none" >Nathaniel Bassey Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Frank Edwards Songs</a>
+                  <a class="text-decoration-none" >Frank Edwards Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">American Gospel Songs</a>
+                  <a class="text-decoration-none" >American Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Moses Bliss Songs</a>
+                  <a class="text-decoration-none" >Moses Bliss Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Sinach Songs</a>
+                  <a class="text-decoration-none" >Sinach Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Nigerian Gospel Songs</a>
+                  <a class="text-decoration-none" >Nigerian Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li class="">
-                  <a class="text-decoration-none" href="">Mercy Chinwo Songs</a>
+                  <a class="text-decoration-none" >Mercy Chinwo Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Nathaniel Bassey Songs</a>
+                  <a class="text-decoration-none" >Nathaniel Bassey Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Frank Edwards Songs</a>
+                  <a class="text-decoration-none" >Frank Edwards Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">American Gospel Songs</a>
+                  <a class="text-decoration-none" >American Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Moses Bliss Songs</a>
+                  <a class="text-decoration-none" >Moses Bliss Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Sinach Songs</a>
+                  <a class="text-decoration-none" >Sinach Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Nigerian Gospel Songs</a>
+                  <a class="text-decoration-none" >Nigerian Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
                 <li>
-                  <a class="text-decoration-none" href="">Foreign Gospel Songs</a>
+                  <a class="text-decoration-none" >Foreign Gospel Songs</a>
                 </li>
               </ul>
             </div>
